--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.1",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
